@@ -1,3 +1,15 @@
+2012-11-29  Zeno Albisser  <zeno@webkit.org>
+
+        GraphicsSurfaceGLX: remove redundant parameter from resolveGLMethods.
+        https://bugs.webkit.org/show_bug.cgi?id=103636
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        * platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:
+        (WebCore::resolveGLMethods):
+        (WebCore::GraphicsSurface::platformCreate):
+        (WebCore::GraphicsSurface::platformImport):
+
 2012-11-29  Mike West  <mkwst@chromium.org>
 
         Typo in 'autofocus' sandboxing error message.
